--- a/TrabajoPractico.html
+++ b/TrabajoPractico.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trabajo Practico III</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <p>Hola Mundo</p>
+    <div class="cuerpo">
+        
+    </div>
 </body>
 </html>
