Añado la presentación.

--- a/TrabajoPractico.html
+++ b/TrabajoPractico.html
@@ -5,8 +5,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="cuerpo">
-        
+    <div class="parrafo">
+        <p>Murua Gino Miguel</p>
+        <p id="presentacion"> Estudiante </p>
+        <p id="contenido"> Soy estudiante de la Universidad Tecnológica Nacional (UTN) y actualmente me encuentro en proceso de aprendizaje<br />
+             en el área de desarrollo web. Hasta ahora, he adquirido conocimientos en lenguajes de programación como C y C++,<br />
+              y estoy ampliando mis habilidades para enfocarme en tecnologías web modernas.</p>
     </div>
 </body>
 </html>
