--- a/TrabajoPractico.html
+++ b/TrabajoPractico.html
@@ -6,11 +6,12 @@
 </head>
 <body>
     <div class="parrafo">
-        <p>Murua Gino Miguel</p>
-        <p id="presentacion"> Estudiante </p>
-        <p id="contenido"> Soy estudiante de la Universidad Tecnológica Nacional (UTN) y actualmente me encuentro en proceso de aprendizaje<br />
+        <h1>Murua Gino Miguel</h1>
+        <h2> Estudiante </h2>
+        <p id="contenido"> Soy estudiante de la Universidad Tecnológica Nacional (<a href="https://www.utn.edu.ar/" target="_blank">UTN</a>) y actualmente me encuentro en proceso de aprendizaje<br />
              en el área de desarrollo web. Hasta ahora, he adquirido conocimientos en lenguajes de programación como C y C++,<br />
-              y estoy ampliando mis habilidades para enfocarme en tecnologías web modernas.</p>
+              y estoy ampliando mis habilidades para enfocarme en tecnologías web modernas. <a href="aboutme.html" target="_self">Mas acerca de mi.</a> <br />
+            </p>
     </div>
 </body>
 </html>
