Agrego la imagen principal de mi curriculum

--- a/TrabajoPractico.html
+++ b/TrabajoPractico.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <div class="parrafo">
+        <img src="imagenes/imagen_foto.jpg" width="100">
         <h1>Murua Gino Miguel</h1>
         <h2> Estudiante </h2>
         <p id="contenido"> Soy estudiante de la Universidad Tecnológica Nacional (<a href="https://www.utn.edu.ar/" target="_blank">UTN</a>) y actualmente me encuentro en proceso de aprendizaje<br />
