Creo una lista con mis objetivos personales

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <body>
         <head>
-            <title>Acerca de mis habilidades</title> 
+            <h1>Acerca de mis habilidades</h1> 
             <table>
                 <tr>
                     <th>Habilidades</th>
@@ -20,4 +20,14 @@
                     <td>JavaScript</td>
                     <td>Conocimiento básico en la programación de páginas web interactivas.</td>
                 </tr>
+                <tr>
+                    <td>C y C++</td>
+                    <td>Conocimiento intermedio en programación de aplicaciones de consola, y uso del framework QT</td>
+                </tr>
+<h2>Objetivos de aprendizaje</h2>
+            <ol>
+                <li>Aprender a utilizar frameworks de desarrollo web como React o Angular.</li>
+                <li>Mejorar mis habilidades en JavaScript y CSS.</li>
+                <li>Aprender sobre bases de datos y su integración con aplicaciones web.</li>
+            </ol>
 </html>
