agrego las imagenes de los logos, y las herramientas que se utilizar

--- a/aboutme.html
+++ b/aboutme.html
@@ -30,4 +30,17 @@
                 <li>Mejorar mis habilidades en JavaScript y CSS.</li>
                 <li>Aprender sobre bases de datos y su integración con aplicaciones web.</li>
             </ol>
+            <h3>Herramientas que utilicé o uso actualmente</h3>
+            <ul>
+                <li>
+                  <img src="imagenes/vscode-logo.png"  width="50">
+                  Visual Studio Code
+                </li>
+                <li>
+                  <img src="imagenes/github-logo.png" width="50">
+                  Git y GitHub
+                </li>
+                <li>
+                  <img src="imagenes/qt-logo.png" width="50">
+                  QT Designer
 </html>
