--- a/TrabajoPractico.html
+++ b/TrabajoPractico.html
@@ -5,10 +5,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="parrafo">
+    <div class="contenedor">
         <img src="imagenes/imagen_foto.jpg" width="100">
-        <h1>Murua Gino Miguel</h1>
-        <h2> Estudiante </h2>
+           <div class="info">
+             <p id="nombre">Murua Gino Miguel</p>
+             <p id="titulo"> Estudiante </p>
+          </div>
+    </div>
+    <div class="parrafo">
         <p id="contenido"> Soy estudiante de la Universidad Tecnológica Nacional (<a href="https://www.utn.edu.ar/" target="_blank">UTN</a>) y actualmente me encuentro en proceso de aprendizaje<br />
              en el área de desarrollo web. Hasta ahora, he adquirido conocimientos en lenguajes de programación como C y C++,<br />
               y estoy ampliando mis habilidades para enfocarme en tecnologías web modernas. <a href="aboutme.html" target="_self">Mas acerca de mi.</a> <br />
