Agrego un título para la pagina

--- a/TrabajoPractico.html
+++ b/TrabajoPractico.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <h1 id="titulo-intro">INTRODUCCIÓN A MI PERSONA</h1>
     <div class="contenedor">
         <img src="imagenes/imagen_foto.jpg" width="100">
            <div class="info">
