Modifiqué el parrafo principal y agregué negritas

--- a/TrabajoPractico.html
+++ b/TrabajoPractico.html
@@ -14,7 +14,7 @@
           </div>
     </div>
     <div class="parrafo">
-        <p id="contenido"> Soy estudiante de la Universidad Tecnológica Nacional (<a href="https://www.utn.edu.ar/" target="_blank">UTN</a>) y actualmente me encuentro en proceso de aprendizaje<br />
+        <p id="contenido"> Soy estudiante de <span> Universidad Tecnológica Nacional</span> (<a href="https://www.utn.edu.ar/" target="_blank">UTN</a>) y actualmente me encuentro en proceso de aprendizaje
              en el área de desarrollo web. Hasta ahora, he adquirido conocimientos en lenguajes de programación como C y C++,<br />
               y estoy ampliando mis habilidades para enfocarme en tecnologías web modernas. <a href="aboutme.html" target="_self">Mas acerca de mi.</a> <br />
             </p>
