Agrego una sección de contacto

--- a/TrabajoPractico.html
+++ b/TrabajoPractico.html
@@ -19,5 +19,13 @@
               y estoy ampliando mis habilidades para enfocarme en tecnologías web modernas. <a href="aboutme.html" target="_self">Mas acerca de mi.</a> <br />
             </p>
     </div>
+    <div class="contacto">
+        <h2>Contacto</h2>
+        <ul>
+            <li><img src="imagenes/whatsapp.png" width="30"> <a href="https://wa.me/+543804148514" target="_blank">Mi Whatsapp.</a></li>
+            <li><img src="imagenes/instagram.png" width="30"> <a href="https://www.instagram.com/gino_murua" target="_blank">Mi Instagram.</a></li>
+            <li><img src="imagenes/github-logo.png" width="30"> <a href="https://github.com/g1n0mmq" target="_blank">Mi cuenta en Github.</a></li>
+        </ul>
+    </div>  
 </body>
 </html>
