--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html> 
 <html lang="en">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <body>
         <head>
             <h1>Acerca de mis habilidades</h1> 
