agrego un enlace para volver a la página principal

--- a/aboutme.html
+++ b/aboutme.html
@@ -44,4 +44,10 @@
                 <li>
                   <img src="imagenes/qt-logo.png" width="50">
                   QT Designer
+                </li>
+            </ul>
+        </table>
+        </head>
+        <a href="TrabajoPractico.html" target="_self">Volver a la página principal</a>
+    </body>
 </html>
